[Headline] Fixed footer white space bug
no refs.

`white-space: nowrap` property was inherited from the global footer styles in the footer of the Headline theme. This caused all sorts of errors on table and mobile sizes.

--- a/packages/headline/assets/css/screen.css
+++ b/packages/headline/assets/css/screen.css
@@ -592,12 +592,12 @@ body:not(.home-template) .gh-topic-grid .gh-card {
 .gh-subscribe {
     margin-top: 40px;
     margin-bottom: 80px;
-    text-align: center;
 }
 
 .gh-subscribe-title {
     font-size: 4.4rem;
     color: var(--color-white);
+    white-space: break-spaces;
 }
 
 .has-serif-title .gh-subscribe-title {
@@ -607,6 +607,7 @@ body:not(.home-template) .gh-topic-grid .gh-card {
 .gh-subscribe-description {
     margin-top: 16px;
     font-size: 2rem;
+    white-space: break-spaces;
 }
 
 .has-serif-body .gh-subscribe-description {
